#731: Code modernization